System tray icon doesn't reappear after restarting Windows Explorer
Categories
(Thunderbird :: OS Integration, defect)
Tracking
(thunderbird_esr91+ fixed, thunderbird94+ fixed)
People
(Reporter: radular, Assigned: rnons)
Details
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
wsmwk
:
approval-comm-beta+
wsmwk
:
approval-comm-esr91+
|
Details | Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:92.0) Gecko/20100101 Firefox/92.0
Steps to reproduce:
Restarting Windows Explorer while Thunderbird is minimized and "When Thunderbird is minimized, move it to the tray" is checked.
Actual results:
Thunderbird icon on system tray is gone. Launching Thunderbird opens the window back as a workaround.
Expected results:
Thunderbird icon should appear. Please refer to the following code example: https://docs.microsoft.com/en-us/windows/win32/shell/taskbar?redirectedfrom=MSDN#taskbar-creation-notification
Updated•4 years ago
|
Comment 1•4 years ago
|
||
Ping worked on the icons in tray. Maybe he knows what happens.
| Assignee | ||
Comment 2•4 years ago
|
||
Updated•4 years ago
|
| Assignee | ||
Comment 3•4 years ago
|
||
Thanks for the link, helps a lot.
Updated•4 years ago
|
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/3da481c0ced1
Rerender tray icon after restarting Windows Explorer. r=mkmelin
| Assignee | ||
Comment 5•4 years ago
|
||
Comment on attachment 9244902 [details]
Bug 1734564 - Rerender tray icon after restarting Windows Explorer. r=mkmelin
[Approval Request Comment]
Regression caused by (bug #): Since the time minimize to tray was introduced
User impact if declined: If TB is minimized to tray and Windows Explorer is restarted, the tray icon disappears and no way to restore the TB window.
Testing completed (on c-c, etc.): c-c
Risk to taking this patch (and alternatives if risky): low
Comment 6•4 years ago
|
||
Comment on attachment 9244902 [details]
Bug 1734564 - Rerender tray icon after restarting Windows Explorer. r=mkmelin
[Triage Comment]
Approved for beta.
Comment 7•4 years ago
|
||
| bugherder uplift | ||
Thunderbird 94.0b4:
https://hg.mozilla.org/releases/comm-beta/rev/dd672e1fb32a
Comment 8•4 years ago
|
||
Comment on attachment 9244902 [details]
Bug 1734564 - Rerender tray icon after restarting Windows Explorer. r=mkmelin
[Triage Comment]
Approved for esr91
Comment 9•4 years ago
|
||
| bugherder uplift | ||
Thunderbird 91.3.0:
https://hg.mozilla.org/releases/comm-esr91/rev/816095eb4b57
Description
•