Bug 1734564 - Rerender tray icon after restarting Windows Explorer. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D127908

--HG--
extra : amend_source : c0c07f57144eeeaa45c9e5aa9715a3a0e6796025